assets/main.scss
/* ... */
@media (prefers-color-scheme: dark)
{
  :root
  {
    --base-fg-color: #{$base-fg-color-dark};
    --base-lt-color: #{color.mix($base-bg-color-dark, $base-fg-color-dark, 95%)};
    --base-bg-color: #{$base-bg-color-dark};
    --base-sw-color: #{color.mix($base-bg-color-dark, $base-fg-color-dark, 50%)};

    --primary-fg-color: #{$primary-fg-color-dark};
    --primary-bg-color: #{$primary-bg-color-dark};
    --primary-sw-color: #{color.mix($primary-bg-color-dark, $primary-fg-color-dark, 50%)};
  }
}


/**
 * Fonts
 */
@include fontFace('Caveat', 'fonts/caveat');
@include fontFace('Dosis',  'fonts/dosis');
@include fontFace('Dosis',  'fonts/dosis-bold', normal, bold);


/**
 * Base styles
 */
body
{
  background: var(--base-bg-color);
  color: var(--base-fg-color);
  font-family: $base-font-family;
  font-size: $base-font-size;
  margin: 0;
  padding: 0;

  a
  {
    color: var(--base-fg-color);
    border-color: var(--base-fg-color);
    line-height: 1.5em;
    text-decoration: none;

    &.current
    {
      border-bottom-width: 3px;
      border-bottom-style: solid;
    }

    &.button
    {
      color: var(--base-bg-color);
      background: var(--base-fg-color);
      border: none !important;
      border-radius: 0.3em;
      box-shadow: 0 3px 0 var(--base-sw-color);
      font-size: 1.2em;
      padding: 0.4em 1.2em;
      white-space: nowrap;

      svg
      {
        height: 0.8em;
        width: auto;

        path
        {
          fill: var(--base-bg-color);
        }
      }
    }
  }

  .page-content
  {
    a
    {
      border-bottom-width: 3px;
      border-bottom-style: solid;
    }

    h2, h3
    {
      a.anchor
      {
        border: none;
        display: none;
        line-height: 1;
        margin-right: -20px;
        padding-left: 4px;
      }
      &:active a.anchor,
      &:hover a.anchor
      {
        display: inline-block;
      }
    }

    ol > ol
    {
      list-style: lower-alpha;
    }

    table
    {
      margin: 0.8em 0 1.6em 0;

      td
      {
        vertical-align: top;
      }
    }

    img,
    video
    {
      border: none !important;
      height: auto;
      max-width: 100%;
    }
  }

  h1, h2, h3, h4
  {
    font-family: $alt-font-family;
    font-weight: normal;
  }

  h1
  {
    font-size: 2em;
  }

  main:not(.index) h1
  {
    margin-top: 0;
  }

  h2
  {
    font-size: 1.6em;
  }

  h3
  {
    font-size: 1.2em;
  }

  svg
  {
    path#bg,
    #bg path
    {
      fill: var(--base-bg-color);
    }

    path,
    path#fg,
    #fg path
    {
      fill: var(--base-fg-color);
    }
  }

  abbr,
  acronym
  {
    cursor: help;
  }

  kbd
  {
    border: 1px solid var(--base-fg-color);
    border-radius: 0.3em;
    box-shadow: 0 2px 0 var(--base-fg-color);
    display: inline-block;
    font-size: 0.75em;
    line-height: 1.4;
    margin: 0 0.1em;
    min-width: 1em;
    padding: 0.1em 0.4em;
    text-align: center;
  }

  code, pre
  {
    background: var(--base-lt-color);
    border-radius: 0.3em;
    font-size: 0.75em;
    font-family: monospace;
    overflow-wrap: break-word;
    padding: 0.2em 0.5em;
  }

  code
  {
    &::before
    {
      cursor: default;
      margin-right: 0.3em;
      opacity: 0.5;
    }

    &.user::before
    {
      content: "$";
    }

    &.root::before {
      content: "#";
    }
  }

  a.copy-to-clipboard
  {
    border: none;
    cursor: pointer;
    line-height: 1;
    padding-left: 4px;
    vertical-align: middle;

    svg
    {
      height: 18px;
      width: 18px;
    }
  }

  .center-text
  {
    text-align: center;

    ul
    {
      text-align: left;
    }
  }

  .aligncenter
  {
    display: block;
    margin: 0 auto;
  }

  .alignleft
  {
    float: left;
    margin-right: 1em;
  }

  .alignright
  {
    float: right;
    margin-left: 1em;
  }
}

@media screen and (max-width: 800px)
{
  body a.button
  {
    font-size: 1.1em;
  }
}


/**
 * Layout
 */
body
{
  display: flex;
  min-height: 100vh;
  flex-direction: column;

  .wrapper
  {
    margin: 0 auto;
    padding: 20px;
    max-width: 980px;

    .graphic
    {
      margin: 10px 0;

      svg
      {
        width: 90%;
        height: auto;
      }
    }

    .row
    {
      display: flex;

      .col
      {
        flex: 1;
      }
    }
  }

  main
  {
    flex: 1;
  }

  header
  {
    .wrapper
    {
      padding: 15px 20px 5px;
    }
  }

  footer
  {
    font-size: 0.8em;

    .wrapper .row
    {
      align-items: center;
      column-gap: 2em;
      row-gap: 1em;
      flex-wrap: wrap;
      justify-content: space-between;

      .col
      {
        flex: unset;
      }

      .col.copyright
      {
        a
        {
          border-bottom-width: 2px;
          border-bottom-style: solid;
        }
      }

      .col.website
      {
        svg
        {
          height: 2em;
          vertical-align: -40%;
        }
        .jekyll svg
        {
          margin-left: -0.7em;
        }
      }

      .col.links
      {
        flex-shrink: 0;

        ul
        {
          margin: 0;
          padding: 0;
          list-style: none;

          li
          {
            display: inline;
            margin-left: 0.5em;

            svg
            {
              height: 2em;
            }
          }
        }
      }
    }
  }
}

@media screen and (max-width: 800px)
{
  body
  {
    main .wrapper .row
    {
      display: block;
    }
  }
}


/**
 * Navigation
 */
.site-nav
{
  display: flex;
  flex: 1;

  .nav-trigger,
  .menu-icon
  {
    display: none;
  }

  ul
  {
    display: flex;
    flex: 1;
    justify-content: space-evenly;
    margin: -2px 0 0 0;
    padding: 0;
    list-style: none;
  }
}
/* ... */

